remove issue scss and make subtitle visible

--- a/src/scss/common/_page-header.scss
+++ b/src/scss/common/_page-header.scss
@@ -100,5 +100,5 @@
 }
 
 .page-header-content {
-	display: none;
+	font-size: rem(17);
 }
